<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/space_background"
    tools:context=".StartScreen">

    <ImageView
        android:id="@+id/StarSurgeLogo"
        android:layout_width="275dp"
        android:layout_height="411dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/StarSurge_Logo"
        android:src="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/startButton"
        style="@style/StartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:background="@drawable/rounded_corners"
        android:contentDescription="@string/start_button"
        android:onClick="onStartGameClick"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:src="@drawable/start_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/StarSurgeLogo" />

    <ImageButton
        android:id="@+id/creditsButton"
        style="@style/StartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_corners"
        android:bottomLeftRadius="4dp"
        android:bottomRightRadius="4dp"
        android:contentDescription="@string/credits"
        android:onClick="onCreditsClick"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:src="@drawable/credits_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startButton" />

</androidx.constraintlayout.widget.ConstraintLayout>